fixed navbar on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -357,6 +357,7 @@
 .navbar {
 	padding-top: 0;
 	padding-bottom: 0;
+	margin-bottom: -26px;
 }
 
 @media (min-width: 992px) {
